[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ramCOH"
version = "1.1.2"
authors = [
    {name = "Thomas van Gerve"},
]
description = "Library for processing and peak fitting of Raman spectra, targeted at CO2 fluids and hydrous silicate glasses"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "csaps",
]

[project.urls]
Homepage = "https://github.com/TDGerve/ramCOH"


[tool.setuptools.package-data]
"ramCOH.static" = ["*.csv"]